# zeroproof-travel-poc

./: ARCHITECTURE.md  QUICK_START_UNIVERSAL_VERIFIER.md  README.md  docker-compose.yaml
.github/workflows/: deploy.yml
agent-a/mcp-client/: Cargo.toml  Dockerfile
agent-a/mcp-client/src/: booking.rs  http_server.rs  lib.rs  main.rs  orchestration.rs  payment.rs  proxy_fetch.rs
agent-a/mcp-client/src/prompts/: extraction.rs  mod.rs
agent-a/mcp-client/src/shared/: claude.rs  fetch.rs  mod.rs  proof.rs  proxy_fetch.rs  tool_map.rs
agent-a/mcp-client/tests/: orchestration_tests.rs
agent-a/mcp-client/tests/common/: mod.rs
agent-a/mcp-client/tests/unit/: orchestration_unit_tests.rs
agent-a/mcp-server/: Dockerfile
agent-a/mcp-server/src/: main.rs
agent-a/src/: main.rs
agent-b/: Dockerfile  test_onchain_encoding.rs
agent-b/mcp-server/: Cargo.toml
agent-b/mcp-server/src/: main.rs
agent-b/mcp-server/src/validate/: mod.rs  payment.rs
agent-b/pricing-core/: Cargo.toml
agent-b/pricing-core/src/: booking.rs  lib.rs
agent-b/server/: Cargo.toml
agent-b/server/src/: main.rs  zk_adapter.rs
agent-b/shared/: Cargo.toml  mod.rs  proof.rs  proxy_fetch.rs  signature.rs
agent-b/tests/: test_generated_proof.rs
ai-agent/: Dockerfile  package-lock.json  package.json
ai-agent/public/: index.html  manifest.json
ai-agent/src/: App.tsx  ChatBox.tsx  ProgressPanel.tsx  ProofBadge.tsx  ProofModal.tsx  index.tsx  wagmi.config.ts
ai-agent/src/proof/: ProofBadge.tsx  ProofModal.tsx  ProofsContext.tsx  index.ts  useProofVerification.ts  useProofs.ts
charts/agent-a-mcpc/templates/: 02-configmap.yaml  04-deployment.yaml
charts/ai-agent/: Chart.yaml  values.yaml
charts/ai-agent/templates/: 02-configmap.yaml  04-deployment.yaml
infra/: agent_a_mcp_client_stack.py  agent_a_mcp_server_stack.py  agent_b_mcp_server_stack.py  app.py  cdk.json  requirements.txt
zk-attestation-service/attester/src/: main.rs  proof_db.rs
zkfetch-wrapper/: .env.example  01 - ZKTLS_ARCHITECTURE.md  02 - ZK-VERIFICATION.md  Dockerfile  README.md  generated_proof.json  index.js  package-lock.json  package.json  proof-structure.json  zk-verify.js  zksnark-verifier.js
zkfetch-wrapper/tests/: generate-proof.js  test-httpbin-origin.js  test-onchain-quick.js  test-onchain.js  test-sdk-verification.js  test-selective-disclosure.js
zkfetch-wrapper/toolbox/: analyze-signature.js  check-contract-witnesses.js  check-sdk-witnesses.js  demo-selective-disclosure.js
