[package]
name = "pricing-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
shared = { path = "../shared", optional = true }

# Must compile for both host and riscv32im-succinct-zkvm-elf
[features]
default = ["http"]
http = ["reqwest", "serde_json", "shared"]