[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Base64 for proxy auth
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Time utilities
chrono = "0.4"

[lib]
name = "shared"
path = "mod.rs"
