[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Base64 for proxy auth
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Cryptography
secp256k1 = { version = "0.27", features = ["recovery"] }
sha3 = "0.10"
hex = "0.4"

# Time utilities
chrono = "0.4"

# Ethereum interaction
ethers = { version = "2.0", features = ["abigen"] }

[lib]
name = "shared"
path = "mod.rs"
